src/app/components/mem-deck-trainer/mem-deck-trainer.component.sass
.container
  height: 100%

.card-display
  margin-top: 16px
  margin-bottom: 16px

.card
  box-shadow: 10px 10px 43px -18px rgba(0, 0, 0, 0.75)
  border-radius: 5px
  min-height: 475px
  height: 100%
  width: 350px
  cursor: pointer
  position: relative
  transform-style: preserve-3d
  overflow: visible

.play-icon
  height: 48px !important
  width: 48px !important
  font-size: 48px !important


.face
  display: block
  position: absolute
  width: 100%
  height: 100%
  border-radius: inherit
  backface-visibility: hidden

  > img
    width: 100%
    height: 100%
    object-fit: scale-down
    border-radius: inherit

  > button
    backface-visibility: hidden

.front
  transform: rotateY(180deg)

